must not load sakana-widget in mobile phone

--- a/src/.vuepress/templateBuild.html
+++ b/src/.vuepress/templateBuild.html
@@ -44,11 +44,18 @@
     <!-- sakana区块 -->
     <div id="sakana-widget" style="position: fixed; bottom: 64px; right: 45px; z-index: 999;"></div>
     <script>
-    function initSakanaWidget() {
-        new SakanaWidget().mount('#sakana-widget');
+    if (!(/Mobi|Android/i.test(navigator.userAgent))) {
+        function initSakanaWidget() {
+            new SakanaWidget().mount('#sakana-widget');
+        }
+
+        var script = document.createElement('script');
+        script.async = true;
+        script.onload = initSakanaWidget;
+        script.src = "/sakana-widget/lib/index.js";
+        document.body.appendChild(script);
     }
     </script>
-    <script async onload="initSakanaWidget()" src="/sakana-widget/lib/index.js"></script>
     <!-- end sakana区块 -->
   </body>
 </html>
