remove sakana-widget

--- a/src/.vuepress/templateBuild.html
+++ b/src/.vuepress/templateBuild.html
@@ -37,7 +37,7 @@
       })({ id: "KMCT8w95vsN84FMB", ck: "KMCT8w95vsN84FMB" });
     </script>
     <!-- end 添加统计代码 -->
-    <link rel="stylesheet" href="/sakana-widget/lib/index.css" />
+    
     <style>
       html {
         background: var(--bg-color, #fff);
@@ -71,7 +71,8 @@
     <!--vuepress-ssr-scripts-->
 
     <!-- sakana区块 -->
-    <div
+    <!-- <link rel="stylesheet" href="/sakana-widget/lib/index.css" /> -->
+    <!-- <div
       id="sakana-widget"
       style="position: fixed; bottom: 64px; right: 45px; z-index: 999"
     ></div>
@@ -87,7 +88,7 @@
         script.src = "/sakana-widget/lib/index.js";
         document.body.appendChild(script);
       }
-    </script>
+    </script> -->
     <!-- end sakana区块 -->
   </body>
 </html>
