--- a/src/.vuepress/templateBuild.html
+++ b/src/.vuepress/templateBuild.html
@@ -6,32 +6,14 @@
     <meta name="baidu-site-verification" content="codeva-udZGoBkoXj" />
     <!-- 添加统计代码 -->
     <script>
-      !(function (p) {
-        "use strict";
-        !(function (t) {
-          var s = window,
-            e = document,
-            i = p,
-            c = "".concat(
-              "https:" === e.location.protocol ? "https://" : "http://",
-              "sdk.51.la/js-sdk-pro.min.js"
-            ),
-            n = e.createElement("script"),
-            r = e.getElementsByTagName("script")[0];
-          (n.type = "text/javascript"),
-            n.setAttribute("charset", "UTF-8"),
-            (n.async = !0),
-            (n.src = c),
-            (n.id = "LA_COLLECT"),
-            (i.d = n);
-          var o = function () {
-            s.LA.ids.push(i);
-          };
-          s.LA ? s.LA.ids && o() : ((s.LA = p), (s.LA.ids = []), o()),
-            r.parentNode.insertBefore(n, r);
-        })();
-      })({ id: "KMCT8w95vsN84FMB", ck: "KMCT8w95vsN84FMB" });
-    </script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm-baidu.geekery.cn/hm.js?e84690022974b0bcfffc5789f3023c51";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
     <!-- end 添加统计代码 -->
     
     <style>
