add google analytics delete baidu counter

--- a/src/.vuepress/templateBuild.html
+++ b/src/.vuepress/templateBuild.html
@@ -3,18 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    
+    <!-- 添加百度搜索验证代码 -->
     <meta name="baidu-site-verification" content="codeva-udZGoBkoXj" />
-    <!-- 添加统计代码 -->
-    <script>
-      var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?e84690022974b0bcfffc5789f3023c51";
-        var s = document.getElementsByTagName("script")[0]; 
-        s.parentNode.insertBefore(hm, s);
-      })();
-      </script>
-    <!-- end 添加统计代码 -->
+    <!-- end 添加百度搜索验证代码 -->
     
     <style>
       html {
